namespace BehaviourAPI.Core
{
    public enum Status
    {
        None = 0,
        Running = 1,
        Sucess = 2,
        Failure = 3,              
        Error = 4
    }
}
